Fix typos, minor charset updates